# practice-pyside

./: .gitignore  README.md  pyproject.toml
sample_data/: fish_list.csv
src/: counter.py  flowlayout.py  layouts.py  widgets.py
src/calculator/: __main__.py  calculator_controller.py  calculator_model.py  calculator_view.py
src/tree_viewer/: __main__.py  tree_controller.py  tree_model.py  tree_view.py
tests/: test_tree_viewer.py
tests/calculator/: test_calculator_controller.py  test_calculator_expression.py  test_calculator_input_validator.py  test_calculator_model.py
