[project]
name = "practice-pyside"
version = "0.1.0"
description = "practice pyside6"
authors = [
    { name = "tamaohome", email = "85826245+tamaohome@users.noreply.github.com" }
]
dependencies = [
    "pyside6>=6.9.0",
    "anytree>=2.13.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.5",
    "pytest-qt>=4.4.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
